--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1,4 +1,3 @@
-
 {
  "cells": [
   {
@@ -9,6 +8,7 @@
    "source": [
     "# Add the Pandas dependency.\n",
     "import pandas as pd"
+    "import os"
    ]
   },
   {
